Protect routes + update swagger
